[tool.poetry]
name = "minitun"
version = "0.1.0"
description = ""
authors = ["Christian Volkmann <ch.volkmann@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.7"
rich = "^13.7.0"
rich-click = "^1.7.2"

[tool.poetry.scripts]
minitun = "minitun.__main__:main"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.8"
black = "^23.12.0"
pytest = "^7.4.3"
pytest-spec = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
unfixable = ["F401"]
